src/main/kotlin/com/example/worktimemanagement/error/ExpiredRefreshTokenException.kt
package com.example.worktimemanagement.error

class ExpiredRefreshTokenException(message: String) : RuntimeException(message)